--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,9 +5,42 @@ permalink: /research/
 author_profile: true
 ---
 
+<style>
+.archive__item {
+  margin-bottom: 1em !important;
+}
+.archive__item-excerpt {
+  margin-top: 0.5em !important;
+  margin-bottom: 0.5em !important;
+  font-size: 0.85em !important;
+}
+.archive__item-authors {
+  margin-bottom: 0.2em !important;
+}
+h2 {
+  margin-bottom: 0.2em !important;
+  margin-top: 1.5em !important;
+}
+p {
+  margin-bottom: 0.5em !important;
+}
+hr {
+  margin-top: 0em !important;
+  margin-bottom: 0em !important;
+}
+.archive__item a {
+  color: #A51C30 !important;
+}
+.archive__item a:hover {
+  color: #8B1728 !important;
+}
+</style>
+
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
 {% endif %}
+
+<p>I study how market-based and regulatory policies can effectively address climate change and pollution, especially through incentives for clean energy and strategies for emission reduction, using a range of quantitative and qualitative methods to inform sustainable policy decisions.</p>
 
 {% include base_path %}
 
