--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -10,12 +10,20 @@ author_profile: true
   margin-bottom: 1em !important;
 }
 .archive__item-excerpt {
-  margin-top: 0.5em !important;
+  margin-top: 5px !important;
   margin-bottom: 0.5em !important;
   font-size: 0.85em !important;
 }
 .archive__item-authors {
-  margin-bottom: 0.2em !important;
+  margin-bottom: 2px !important;
+  line-height: 1.0 !important;
+}
+/* Specific targeting for working papers */
+.workingpapers-item .archive__item-authors {
+  margin-bottom: -5px !important;
+}
+.workingpapers-item .archive__item-excerpt {
+  margin-top: 0px !important;
 }
 h2 {
   margin-bottom: 0.2em !important;
